Fixed overlap of link list

--- a/style.css
+++ b/style.css
@@ -57,6 +57,9 @@ a:hover {
 }
 
 @media (max-width: 414px) {
+  .contact-list {
+    width: 100%;
+  }
   .contact-list li a {
     font-size: 1.5em;
   }
